# Rust_lernen

./: .gitignore  Cargo.toml  README.md  fragen
Afg_30_1/: Afg_30_1.rs
Hallo Welt/: main.rs
Hallo_Welt/: cargo.toml  main.rs
Lib/: lib.rs
MSP430/msp-test/: Cargo.toml  Xargo.toml  build.rs
MSP430/msp-test/.cargo/: config
afg_100_0/: Cargo.toml
afg_100_0/src/: main.rs
afg_30_1/: Cargo.toml
afg_30_1/src/: lib.rs  main.rs
afg_40_3/: Cargo.toml
afg_40_3/src/: main.rs
afg_50_3/: Cargo.toml
afg_50_3/src/: main.rs
afg_70_2/: Cargo.toml
afg_70_2/src/: main.rs
det/: Cargo.toml
det/src/: main.rs
hallo_welt/: Cargo.toml
hallo_welt/src/: main.rs
ngspice-rs/: Cargo.toml
ngspice-rs/Spice64_dll/lib/: about-libs.txt
ngspice-rs/Spice64_dll/lib/lib-mingw/: libngspice.la
ngspice-rs/Spice64_dll/lib/lib-vs/: ngspice.exp  ngspice.lib
ngspice-rs/Spice64_dll/lib/ngspice/: analog.cm  digital.cm  spice2poly.cm  table.cm  xtradev.cm  xtraevt.cm
ngspice-rs/src/: main.rs  spice.rs
rust_OGL/: Cargo.toml
rust_OGL/src/: main.rs  render_gl.rs  triangle.frag  triangle.vert
rust_cuda/: Cargo.toml
rust_cuda/src/: main.rs
rust_future/: Cargo.toml
rust_future/src/: main.rs
rust_gtk/: Cargo.toml
rust_gtk/src/: main.rs
rust_iced/: Cargo.toml
rust_iced/src/: main.rs  main2.rs
rust_regler/: Cargo.toml
rust_regler/src/: main.rs
serial/: Cargo.toml
serial/src/: main.rs
spice-rs/: Cargo.toml  Test.cir
spice-rs/src/: main.rs  mt_test.rs  psa.rs  pso_mt.rs  spice.rs  vect.rs
spilib/: .spilibrc  Cargo.toml
spilib/src/: main.rs
(+1 files in other folders)
