[package]
name = "spice-rs"
version = "0.1.0"
authors = ["Voidheart88 <39334902+Voidheart88@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/spice.rs"

[dependencies]
rand = "0.7.3"
easy-hash = "0.1.0"
generic-array = "0.14.1"
crossbeam = "0.7.3"
bus = "2.2.3"